--- a/Modeling.ipynb
+++ b/Modeling.ipynb
@@ -1,9 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "major-night",
+   "metadata": {},
+   "source": [
+    "# Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "recent-municipality",
+   "metadata": {},
+   "source": [
+    "## Importing Libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "dedicated-valve",
+   "id": "enormous-quick",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T19:41:40.686284Z",
@@ -17,13 +33,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "from wordcloud import WordCloud\n",
-    "# import pdb\n",
     "import re\n",
-    "# import os\n",
     "import time\n",
-    "#from pathlib import Path\n",
-    "#import pickle\n",
-    "#import random\n",
     "from sklearn.metrics import classification_report\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import confusion_matrix\n",
@@ -41,9 +52,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "loving-frederick",
+   "metadata": {},
+   "source": [
+    "## Importing Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "meaning-cedar",
+   "id": "surgical-perth",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.333431Z",
@@ -57,9 +76,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "quiet-channel",
+   "metadata": {},
+   "source": [
+    "### Removing Unnecessary Columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "turkish-patrol",
+   "id": "solar-findings",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.368484Z",
@@ -74,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "foster-november",
+   "id": "orange-bridal",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.388699Z",
@@ -87,9 +114,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "educational-maryland",
+   "metadata": {},
+   "source": [
+    "### Adding Status column to positive class"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "facial-completion",
+   "id": "governing-learning",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.406694Z",
@@ -104,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "devoted-candle",
+   "id": "rough-american",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.433496Z",
@@ -117,9 +152,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "excess-broad",
+   "metadata": {},
+   "source": [
+    "### Joining the review dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "brave-symbol",
+   "id": "black-clerk",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.447797Z",
@@ -134,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "familiar-motel",
+   "id": "broad-queen",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.479190Z",
@@ -149,7 +192,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "parallel-guide",
+   "id": "patient-strap",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.503331Z",
@@ -175,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "olive-prophet",
+   "id": "differential-september",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.619812Z",
@@ -190,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "younger-hudson",
+   "id": "negative-sigma",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.679329Z",
@@ -221,12 +264,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "spiritual-aaron",
+   "id": "compact-bumper",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:14.703817Z",
      "start_time": "2021-03-23T18:19:14.682542Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -303,14 +347,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "split-sender",
+   "metadata": {},
+   "source": [
+    "### Looking at the data distrbution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "aboriginal-flush",
+   "id": "clear-chain",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:15.048850Z",
      "start_time": "2021-03-23T18:19:14.718453Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -343,9 +396,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "curious-proxy",
+   "metadata": {},
+   "source": [
+    "### Seperating the columns into list"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "statutory-pilot",
+   "id": "alternative-circuit",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:15.146727Z",
@@ -358,9 +419,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "recovered-giant",
+   "metadata": {},
+   "source": [
+    "## Data Cleaning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "revised-pacific",
+   "metadata": {},
+   "source": [
+    "### Creating a function to remove emojis, remove stop words and Lemmatize the text"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "prostate-times",
+   "id": "realistic-saturday",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:19:15.192426Z",
@@ -408,12 +485,13 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "handled-presentation",
+   "id": "collected-cancer",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:20:37.156895Z",
      "start_time": "2021-03-23T18:19:20.598731Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -433,14 +511,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "occasional-spending",
+   "metadata": {},
+   "source": [
+    "### Making a word cloud of the cleaned text"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "reliable-indie",
+   "id": "prospective-photographer",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:21:11.675463Z",
      "start_time": "2021-03-23T18:20:37.163508Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -474,9 +561,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "sophisticated-vintage",
+   "metadata": {},
+   "source": [
+    "## Creating Models"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "boolean-squad",
+   "metadata": {},
+   "source": [
+    "### Splitting the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "bibliographic-seminar",
+   "id": "structural-villa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T19:41:59.694358Z",
@@ -501,12 +604,13 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "higher-roberts",
+   "id": "deadly-basement",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:21:12.264817Z",
      "start_time": "2021-03-23T18:21:12.255019Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -525,9 +629,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "postal-presence",
+   "metadata": {},
+   "source": [
+    "### Using TFIDF vectorizer to transform the data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "classified-intent",
+   "id": "extra-watch",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T19:43:06.127594Z",
@@ -553,9 +665,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "academic-conversation",
+   "metadata": {},
+   "source": [
+    "### Creating a function to evaluate different models"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "decreased-province",
+   "id": "buried-dominant",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:22:02.417697Z",
@@ -591,14 +711,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "adjacent-conjunction",
+   "metadata": {},
+   "source": [
+    "#### Bernoulli"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "reserved-traffic",
+   "id": "unlike-somewhere",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T19:45:30.374646Z",
      "start_time": "2021-03-23T19:45:28.703133Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -636,9 +765,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aboriginal-silence",
+   "metadata": {},
+   "source": [
+    "Not a bad Baseline model, classifies well but is lacking in the possitive class "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "connected-glory",
+   "metadata": {},
+   "source": [
+    "#### Linear SVC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "conservative-talent",
+   "id": "governmental-excerpt",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T18:24:23.093955Z",
@@ -681,9 +826,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "organizational-protein",
+   "metadata": {},
+   "source": [
+    "Much more even distribution and a higher accuracy score, promissing model to dive further into"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "spiritual-exclusive",
+   "metadata": {},
+   "source": [
+    "#### Logistic"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "wireless-scientist",
+   "id": "incident-tours",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T19:45:28.695336Z",
@@ -727,9 +888,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dimensional-morrison",
+   "metadata": {},
+   "source": [
+    "The best and more even model so far, the model I'll focus on going forward"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "sitting-dispute",
+   "metadata": {},
+   "source": [
+    "#### SVC"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "digital-mentor",
+   "id": "missing-tyler",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-23T19:43:47.050081Z",
@@ -781,60 +958,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "portuguese-tension",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-24T10:44:31.667910Z",
-     "start_time": "2021-03-24T10:44:31.620786Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "param_grid_SVC = {'C':[1,10,100,1000],\n",
-    "                  'gamma':[1,0.1,0.001,0.0001], \n",
-    "                  'kernel':['linear','rbf']}\n",
-    "\n",
-    "# grid_SVC = GridSearchCV(estimator=SVC(),\n",
-    "#                     param_grid=param_grid_SVC,\n",
-    "#                     scoring='accuracy',\n",
-    "#                     verbose=1,\n",
-    "#                     n_jobs=-1)\n",
-    "\n",
-    "# result_grid_SVC = grid_SVC.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "faced-negotiation",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-03-23T18:43:43.882612Z",
-     "start_time": "2021-03-23T18:43:43.872704Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "LogParams = {\n",
-    "    'C':[1.0,10.0,100.0,1000.0],\n",
-    "    'max_iter':[1,10,100,500], \n",
-    "    'solver':['lbfgs','liblinear','sag','saga'], \n",
-    "    'penalty':['l1','l2','elasticnet']\n",
-    "}\n",
-    "\n",
-    "LinearSVCParams = {\n",
-    "    'penalty':['l1','l2'],\n",
-    "    'loss':['square','squared_hinge'],\n",
-    "    'C':[1.0,10.0,100.0,1000.0],\n",
-    "    'tol':[1e-5,1e-4,1e-3,1e-2,1e-1]\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "brief-estimate",
+   "id": "owned-dutch",
    "metadata": {},
    "outputs": [],
    "source": []
