--- a/dask.ipynb
+++ b/dask.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "partial-indication",
+   "id": "offshore-progressive",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T20:00:09.186606Z",
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "suspended-seeker",
+   "id": "empirical-minneapolis",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T13:20:24.183605Z",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "recorded-drunk",
+   "id": "funky-colorado",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T13:20:27.144714Z",
@@ -71,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "signal-inquiry",
+   "id": "amateur-battle",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T13:20:36.068858Z",
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "hourly-yemen",
+   "id": "favorite-shannon",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T13:20:37.341988Z",
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "revised-interference",
+   "id": "conceptual-lesson",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T13:20:44.216482Z",
@@ -116,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "equal-pittsburgh",
+   "id": "built-trauma",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T13:20:45.319968Z",
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "other-sandwich",
+   "id": "centered-shoulder",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T13:21:08.268043Z",
@@ -146,7 +146,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "concrete-silence",
+   "id": "secure-native",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T13:21:09.679089Z",
@@ -161,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "broke-cleaner",
+   "id": "favorite-brother",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T13:21:13.986966Z",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "apparent-norwegian",
+   "id": "basic-adams",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T13:21:14.830618Z",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "occasional-trinity",
+   "id": "industrial-bulgaria",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T13:23:34.311119Z",
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "premier-desktop",
+   "id": "continuous-battery",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T13:23:44.765939Z",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "unlike-journey",
+   "id": "loving-bahamas",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T13:25:10.665333Z",
@@ -304,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "floating-toronto",
+   "id": "progressive-gasoline",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T13:44:31.124357Z",
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 84,
-   "id": "inappropriate-pioneer",
+   "id": "coated-helen",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T20:35:48.357511Z",
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "current-royalty",
+   "id": "frequent-singles",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T20:35:52.038532Z",
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "lonely-superior",
+   "id": "pressed-nature",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2021-03-24T20:35:52.123971Z",
@@ -434,7 +434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cardiac-yellow",
+   "id": "steady-indication",
    "metadata": {
     "ExecuteTime": {
      "start_time": "2021-03-24T20:34:34.758Z"
@@ -460,7 +460,16 @@
       "distributed.utils_perf - WARNING - full garbage collections took 10% CPU time recently (threshold: 10%)\n",
       "distributed.utils_perf - WARNING - full garbage collections took 10% CPU time recently (threshold: 10%)\n",
       "distributed.utils_perf - WARNING - full garbage collections took 10% CPU time recently (threshold: 10%)\n",
-      "distributed.utils_perf - WARNING - full garbage collections took 11% CPU time recently (threshold: 10%)\n"
+      "distributed.utils_perf - WARNING - full garbage collections took 11% CPU time recently (threshold: 10%)\n",
+      "distributed.utils_perf - WARNING - full garbage collections took 11% CPU time recently (threshold: 10%)\n",
+      "distributed.utils_perf - WARNING - full garbage collections took 11% CPU time recently (threshold: 10%)\n",
+      "distributed.utils_perf - WARNING - full garbage collections took 11% CPU time recently (threshold: 10%)\n",
+      "distributed.utils_perf - WARNING - full garbage collections took 11% CPU time recently (threshold: 10%)\n",
+      "distributed.utils_perf - WARNING - full garbage collections took 11% CPU time recently (threshold: 10%)\n",
+      "distributed.utils_perf - WARNING - full garbage collections took 11% CPU time recently (threshold: 10%)\n",
+      "distributed.utils_perf - WARNING - full garbage collections took 11% CPU time recently (threshold: 10%)\n",
+      "distributed.utils_perf - WARNING - full garbage collections took 12% CPU time recently (threshold: 10%)\n",
+      "distributed.utils_perf - WARNING - full garbage collections took 12% CPU time recently (threshold: 10%)\n"
      ]
     }
    ],
@@ -477,7 +486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "industrial-debut",
+   "id": "traditional-brighton",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -485,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "protecting-antenna",
+   "id": "welcome-roads",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,7 +510,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "brutal-bottom",
+   "id": "designing-attribute",
    "metadata": {},
    "outputs": [],
    "source": [
